--- a/templates/register.html
+++ b/templates/register.html
@@ -84,7 +84,7 @@
         <input id="name" name="name" required type="text" value>
         <input id="id" name="id" required type="text" value>
         <input id="pw" name="pw" required type="password" value>
-        <button type="submit">로그인</button>
+        <button type="submit">회원가입</button>
       </form>
     </div>
   </div>
